--- a/front/src/index.html
+++ b/front/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontAngular</title>
+  <title>Guia Local</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIBkZEexyq3td0QPGZHb9B_-s7-wm6y6I&libraries=places"></script>
 </head>
 <body>
   <app-root></app-root>
